add multiple github actions commands

--- a/.github/workflows/sample_workflow.yaml
+++ b/.github/workflows/sample_workflow.yaml
@@ -3,8 +3,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
       - uses: actions/checkout@v3
-      - name: test echo
+      - name: Install Dependencies
         run: |
-          echo 'Running script'
-          ls
+          pip install commonmark
+          make site
+
+      - name: Confirm site is made
+        run: ls
