--- a/.github/workflows/sample_workflow.yaml
+++ b/.github/workflows/sample_workflow.yaml
@@ -25,6 +25,8 @@ jobs:
         run: |
           sed -i 's/_site//' .gitignore
           git add .
+          git config --local user.name "Soup@Github Actions"
+          git config --local user.email davenlu1989@gmail.com
           git commit -m 'deploy from github actions'
           git push --set-upstream gh-pages
         
