--- a/.github/workflows/sample_workflow.yaml
+++ b/.github/workflows/sample_workflow.yaml
@@ -24,9 +24,9 @@ jobs:
       - name: Announce Deploy
         run: |
           sed -i 's/_site//' .gitignore
+          git remote -v
           git add .
           git config --local user.name "Soup@Github Actions"
           git config --local user.email davenlu1989@gmail.com
-          git commit -m 'deploy from github actions'
-          git push --set-upstream gh-pages
+
         
