--- a/.github/workflows/sample_workflow.yaml
+++ b/.github/workflows/sample_workflow.yaml
@@ -21,7 +21,10 @@ jobs:
           git checkout -b gh-pages
           make site
           sed -i 's/_site//' .gitignore
-
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -a -m "Add changes"
+          
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
