--- a/.github/workflows/sample_workflow.yaml
+++ b/.github/workflows/sample_workflow.yaml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - main
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,7 +20,6 @@ jobs:
           pip install commonmark
       - name: Create Local Changes
         run: |
-          git checkout -b gh-pages
           make site
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
