--- a/.github/workflows/sample_workflow.yaml
+++ b/.github/workflows/sample_workflow.yaml
@@ -28,6 +28,7 @@ jobs:
           branch: gh-pages
       - name: Check output html
         run: |
+          git checkout gh-pages
           cd _site
           cat index.html
           git branch -v
