install dependencies can be abstracted away to make venv

--- a/.github/workflows/sample_workflow.yaml
+++ b/.github/workflows/sample_workflow.yaml
@@ -19,7 +19,7 @@ jobs:
           fetch-depth: 0
       - name: Install Dependencies
         run: |
-          pip install commonmark
+          make venv
       - name: Create Local Changes
         run: |
           set APP_ENV=production
