test img references

--- a/.github/workflows/sample_workflow.yaml
+++ b/.github/workflows/sample_workflow.yaml
@@ -33,5 +33,5 @@ jobs:
         run: |
           git checkout gh-pages
           cd _site
-          cat index.html
+          cat blog/proin-quam/index.html
           git branch -v
